EXTRA_DIST = configs/CEGUIConfig.xsd \
             fonts/arial.font \
	     fonts/arial.ttf \
	     fonts/bluehigh.ttf \
	     fonts/bluehighway-10.font \
	     fonts/bluehighway-12.font \
	     fonts/bluehighway-8.font \
	     fonts/Commonv2c.ttf \
             fonts/Commonwealth-10.font \
             fonts/DejaVuSans-10.font \
             fonts/DejaVuSans.ttf \
             fonts/FairChar-30.font \
             fonts/fkp-16.font \
             fonts/fkp.de.pcf \
             fonts/Font.xsd \
             fonts/Iconified-12.font \
             fonts/Iconiv2.ttf \
             fonts/README \
             fonts/common.txt \
             fonts/icon.txt \
             fonts/Legal.txt \
             imagesets/sleekspace_bsod.imageset \
             imagesets/sleekspace_bsod.png \
             looknfeel/Falagard.xsd \
             looknfeel/sleekspace_bsod.looknfeel \
             schemes/GUIScheme.xsd \
	     schemes/SleekSpaceBSOD.scheme 
